[WEBDEV-605] Fix global search alignment

--- a/src/stylesheets/elements/_form.scss
+++ b/src/stylesheets/elements/_form.scss
@@ -263,7 +263,7 @@ input[type="file"].js-has-focus + label {
   }
   input[type="search"],
   input[type="text"] {
-    flex: 1;
+    flex-grow: 1;
     margin-bottom: 0;
     margin-right: -1px;
   }
